<resources>
    <string name="app_name">pSquared</string>
    <string name="test">pleaseLetMeFindGit</string>
    <string name="listeners">Listeners</string>
    <string name="stats">Statistics</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="profile_title">Profile</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="settings_title">Settings</string>
    <string name="change_pwd">Change password</string>
    <string name="active_listener_not">Notify me when a listener comes online</string>
    <string name="about_text">p-squared is the anonymous peer-listening chatline for the Johns
        Hopkins community. We offer a safe space for anyone to discuss anything from everyday
        frustrations to serious concerns.\n\n
        Peer listeners are undergraduate students who have been selected and trained in 50 hours of
        active listening skills and crisis intervention through the JHU Counseling Center. We are
        trained to listen and respond without giving advice. We\'ll help you explore your thoughts
        and feelings and come up with your own solutions.\n\n
        Your conversations are completely confidential and not recorded in any way. We will
        NEVER talk about you to others</string>
    <string name="userSearch">Enter username</string>
</resources>
